# protobuf-super-lite

./: .clang-format  .gitmodules  BUILD.gn  LICENSE  README.md  format_cpp_and_build_files.sh
pb/: examples_unittest.cc  field_list.h  inspection.cc  inspection.h  inspection_unittest.cc  integer_wrapper-internal.h  integer_wrapper.h  parse.h  protobuf_dump.cc  serialize.h
pb/codec/: endian.h  endian_unittest.cc  field_rules.h  field_rules_unittest.cc  iterable_util-internal.h  iterable_util.h  iterable_util_unittest.cc  limits.h  map_field_entry-internal.h  map_field_entry.h  map_field_entry_facade.h  map_field_entry_unittest.cc  parse.h  parse_unittest.cc  serialize.h  serialize_unittest.cc  tag.h  tag_unittest.cc  wire_type.h  wire_type_unittest.cc  zigzag.h  zigzag_unittest.cc
